--- a/.github/workflows/gke_manifest.yml
+++ b/.github/workflows/gke_manifest.yml
@@ -20,46 +20,27 @@ jobs:
       - name: Checkout Code
         uses: actions/checkout@v4
 
-      # ✅ Authenticate to Google Cloud
-      - name: Authenticate to Google Cloud
-        uses: google-github-actions/auth@v1
-        with:
-          credentials_json: '${{ secrets.GCP_SA_KEY }}'
-
-      # ✅ Set up Google Cloud CLI
-      - name: Set up Google Cloud CLI
+      - name: Set up Google Cloud SDK
         uses: google-github-actions/setup-gcloud@v1
         with:
           project_id: ${{ secrets.GCP_PROJECT_ID }}
-          install_components: 'gke-gcloud-auth-plugin'
+          service_account_key: ${{ secrets.GCP_CREDENTIALS }}
           export_default_credentials: true
 
-      # ✅ Get GKE credentials
       - name: Get GKE credentials
         run: |
           gcloud container clusters get-credentials ${{ secrets.GKE_CLUSTER_NAME }} \
-            --region ${{ secrets.GCP_REGION }} \
+            --zone ${{ secrets.GCP_ZONE }} \
             --project ${{ secrets.GCP_PROJECT_ID }}
 
-      # ✅ Install kubectl
-      - name: Install kubectl
-        uses: azure/setup-kubectl@v4
-        with:
-          version: 'latest'
-
-      # ✅ Install Helm
       - name: Install Helm
         uses: azure/setup-helm@v3
-        with:
-          version: 'latest'
 
-      # ✅ Deploy Helm chart
       - name: Deploy via Helm
         run: |
           helm upgrade --install $HELM_RELEASE_NAME $HELM_CHART_DIR \
             --namespace default --create-namespace
 
-      # ✅ Get Ingress IP
       - name: Get Ingress IP
         run: |
           echo "Waiting for Ingress IP..."
@@ -68,10 +49,9 @@ jobs:
             if [[ -n "$IP" ]]; then
               echo "✅ App is available at:"
               echo "http://$IP or http://$IP.nip.io"
-              exit 0
+              break
             fi
             sleep 10
           done
-          echo "❌ Ingress IP not found after timeout."
-          exit 1
+
 
