--- a/helm/microservice/values.yaml
+++ b/helm/microservice/values.yaml
@@ -1,8 +1,8 @@
-replicaCount: 2
+replicaCount: 1
 
 image:
   repository: nginx
-  tag: latest
+  tag: stable
   pullPolicy: IfNotPresent
 
 service:
@@ -11,14 +11,13 @@ service:
 
 ingress:
   enabled: true
-  className: "nginx"
+  className: "nginx"  # or "gce" if using GKE default
   annotations:
-    kubernetes.io/ingress.class: nginx
+    kubernetes.io/ingress.class: "nginx"  # or "gce"
   hosts:
-    - host: microservice.example.com
+    - host: ""
       paths:
         - path: /
-          pathType: ImplementationSpecific
-  tls: []  # Add TLS secrets here if using HTTPS
+          pathType: Prefix
+  tls: []
 
-resources: {}
