--- a/helm/microservice/Chart.yaml
+++ b/helm/microservice/Chart.yaml
@@ -1,5 +1,6 @@
 apiVersion: v2
 name: microservice
-description: A Helm chart for Kubernetes
+description: A simple microservice on GKE
+type: application
 version: 0.1.0
-appVersion: "1.0"
+appVersion: "1.0.0"
