--- a/helm/microservice/values.yaml
+++ b/helm/microservice/values.yaml
@@ -1,8 +1,8 @@
-replicaCount: 1
+replicaCount: 2
 
 image:
   repository: nginx
-  tag: stable
+  tag: latest
   pullPolicy: IfNotPresent
 
 service:
@@ -11,11 +11,12 @@ service:
 
 ingress:
   enabled: true
-  className: "nginx"  # or "gce" if using GKE default
+  className: nginx
   annotations:
-    kubernetes.io/ingress.class: "nginx"  # or "gce"
+    kubernetes.io/ingress.class: nginx
+    nginx.ingress.kubernetes.io/rewrite-target: /
   hosts:
-    - host: ""
+    - host: "YOUR_IP_HERE.nip.io"
       paths:
         - path: /
           pathType: Prefix
