--- a/helm/microservice/templates/deployment.yaml
+++ b/helm/microservice/templates/deployment.yaml
@@ -1,21 +1,20 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: {{ include "microservice.fullname" . }}
+  name: microservice
 spec:
   replicas: {{ .Values.replicaCount }}
   selector:
     matchLabels:
-      app: {{ include "microservice.name" . }}
+      app: microservice
   template:
     metadata:
       labels:
-        app: {{ include "microservice.name" . }}
+        app: microservice
     spec:
       containers:
-        - name: {{ include "microservice.name" . }}
+        - name: nginx
           image: "{{ .Values.image.repository }}:{{ .Values.image.tag }}"
-          imagePullPolicy: {{ .Values.image.pullPolicy }}
           ports:
             - containerPort: 80
 
