--- a/helm/microservice/templates/rbac.yaml
+++ b/helm/microservice/templates/rbac.yaml
@@ -1,23 +1,27 @@
+apiVersion: v1
+kind: ServiceAccount
+metadata:
+  name: microservice-sa
+
+---
 apiVersion: rbac.authorization.k8s.io/v1
 kind: Role
 metadata:
-  name: secrets-reader
-  namespace: default
+  name: microservice-role
 rules:
-- apiGroups: [""]
-  resources: ["secrets"]
-  verbs: ["get", "list", "watch"]
+  - apiGroups: [""]
+    resources: ["pods"]
+    verbs: ["get", "list", "watch"]
+
 ---
 apiVersion: rbac.authorization.k8s.io/v1
 kind: RoleBinding
 metadata:
-  name: secrets-reader-binding
-  namespace: default
+  name: microservice-rb
 subjects:
-- kind: ServiceAccount
-  name: default
-  namespace: default
+  - kind: ServiceAccount
+    name: microservice-sa
 roleRef:
   kind: Role
-  name: secrets-reader
+  name: microservice-role
   apiGroup: rbac.authorization.k8s.io
